// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] matches snapshot 1`] = `
<div>
  <div
    class="h-screen"
    id="App"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
      id="sidebar"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
        id="request-list"
      >
        <div
          class="flex select-none justify-between bg-slate-100 p-1 font-bold"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
        id="intercept-list"
      >
        <div
          class="flex select-none justify-between bg-slate-100 p-1"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="min-h-screen ml-64"
      id="main"
    >
      <div
        class="container flex min-h-screen flex-col items-center justify-center bg-slate-50 "
        id="welcome-view"
      >
        <div
          class="container max-w-xs"
        >
          <svg
            class="h-auto w-full fill-indigo-700"
          />
        </div>
        <div
          class="text-4xl font-bold"
        >
          Interceptor
        </div>
        <button
          class="my-6 rounded bg-indigo-700 px-9 py-3 text-sm font-semibold text-white hover:opacity-75 active:opacity-100"
          title="Add intercept"
        >
          Add Intercept
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`[App] should update after callback 1`] = `
<div>
  <div
    class="h-screen"
    id="App"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
      id="sidebar"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
        id="request-list"
      >
        <div
          class="flex select-none justify-between bg-slate-100 p-1 font-bold"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        >
          <div
            class="select-none overflow-hidden text-ellipsis whitespace-nowrap"
          >
            <span>
              https://example.com
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
        id="intercept-list"
      >
        <div
          class="flex select-none justify-between bg-slate-100 p-1"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="min-h-screen ml-64"
      id="main"
    >
      <div
        class="container flex min-h-screen flex-col items-center justify-center bg-slate-50 "
        id="welcome-view"
      >
        <div
          class="container max-w-xs"
        >
          <svg
            class="h-auto w-full fill-indigo-700"
          />
        </div>
        <div
          class="text-4xl font-bold"
        >
          Interceptor
        </div>
        <button
          class="my-6 rounded bg-indigo-700 px-9 py-3 text-sm font-semibold text-white hover:opacity-75 active:opacity-100"
          title="Add intercept"
        >
          Add Intercept
        </button>
      </div>
    </main>
  </div>
</div>
`;
